// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mixBlendMode renders 0 1`] = `
Array [
  .c0 {
  mix-blend-mode: 0;
}

<div
    className="c0"
  />,
  .c0 {
  mix-blend-mode: 0;
}

<div
    className="c0"
  />,
  .c0 {
  mix-blend-mode: 0;
}

<div
    className="c0"
  />,
  .c0 {
  mix-blend-mode: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`mixBlendMode renders function 1`] = `
Array [
  .c0 {
  mix-blend-mode: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  mix-blend-mode: has;
}

<div
    className="c0"
  />,
  .c0 {
  mix-blend-mode: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  mix-blend-mode: has;
}

<div
    className="c0"
  />,
]
`;

exports[`mixBlendMode renders invalid theme path 1`] = `
Array [
  .c0 {
  mix-blend-mode: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  mix-blend-mode: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  mix-blend-mode: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  mix-blend-mode: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`mixBlendMode renders negative number 1`] = `
Array [
  .c0 {
  mix-blend-mode: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  mix-blend-mode: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  mix-blend-mode: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  mix-blend-mode: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`mixBlendMode renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  mix-blend-mode: July;
}

@media screen and (min-width:November) {
  .c0 {
    mix-blend-mode: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    mix-blend-mode: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    mix-blend-mode: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    mix-blend-mode: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  mix-blend-mode: July;
}

@media screen and (min-width:November) {
  .c0 {
    mix-blend-mode: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    mix-blend-mode: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    mix-blend-mode: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    mix-blend-mode: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  mix-blend-mode: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    mix-blend-mode: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    mix-blend-mode: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    mix-blend-mode: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    mix-blend-mode: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  mix-blend-mode: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    mix-blend-mode: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    mix-blend-mode: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    mix-blend-mode: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    mix-blend-mode: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`mixBlendMode renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    mix-blend-mode: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    mix-blend-mode: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    mix-blend-mode: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    mix-blend-mode: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    mix-blend-mode: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    mix-blend-mode: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    mix-blend-mode: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    mix-blend-mode: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    mix-blend-mode: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    mix-blend-mode: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    mix-blend-mode: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    mix-blend-mode: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    mix-blend-mode: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    mix-blend-mode: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    mix-blend-mode: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    mix-blend-mode: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`mixBlendMode renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  mix-blend-mode: July;
}

@media May {
  .c0 {
    mix-blend-mode: August;
  }
}

@media April {
  .c0 {
    mix-blend-mode: September;
  }
}

@media January {
  .c0 {
    mix-blend-mode: November;
  }
}

@media April {
  .c0 {
    mix-blend-mode: August;
  }
}

@media June {
  .c0 {
    mix-blend-mode: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  mix-blend-mode: July;
}

@media May {
  .c0 {
    mix-blend-mode: August;
  }
}

@media April {
  .c0 {
    mix-blend-mode: September;
  }
}

@media January {
  .c0 {
    mix-blend-mode: November;
  }
}

@media April {
  .c0 {
    mix-blend-mode: August;
  }
}

@media June {
  .c0 {
    mix-blend-mode: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  mix-blend-mode: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    mix-blend-mode: November;
  }
}

@media April {
  .c0 {
    mix-blend-mode: January;
  }
}

@media January {
  .c0 {
    mix-blend-mode: December;
  }
}

@media April {
  .c0 {
    mix-blend-mode: April;
  }
}

@media June {
  .c0 {
    mix-blend-mode: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  mix-blend-mode: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    mix-blend-mode: November;
  }
}

@media April {
  .c0 {
    mix-blend-mode: January;
  }
}

@media January {
  .c0 {
    mix-blend-mode: December;
  }
}

@media April {
  .c0 {
    mix-blend-mode: April;
  }
}

@media June {
  .c0 {
    mix-blend-mode: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`mixBlendMode renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    mix-blend-mode: July;
  }
}

@media April {
  .c0 {
    mix-blend-mode: August;
  }
}

@media January {
  .c0 {
    mix-blend-mode: September;
  }
}

@media April {
  .c0 {
    mix-blend-mode: November;
  }
}

@media June {
  .c0 {
    mix-blend-mode: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    mix-blend-mode: July;
  }
}

@media April {
  .c0 {
    mix-blend-mode: August;
  }
}

@media January {
  .c0 {
    mix-blend-mode: September;
  }
}

@media April {
  .c0 {
    mix-blend-mode: November;
  }
}

@media June {
  .c0 {
    mix-blend-mode: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    mix-blend-mode: January;
  }
}

@media April {
  .c0 {
    mix-blend-mode: December;
  }
}

@media January {
  .c0 {
    mix-blend-mode: April;
  }
}

@media April {
  .c0 {
    mix-blend-mode: May;
  }
}

@media June {
  .c0 {
    mix-blend-mode: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    mix-blend-mode: January;
  }
}

@media April {
  .c0 {
    mix-blend-mode: December;
  }
}

@media January {
  .c0 {
    mix-blend-mode: April;
  }
}

@media April {
  .c0 {
    mix-blend-mode: May;
  }
}

@media June {
  .c0 {
    mix-blend-mode: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`mixBlendMode renders postitive number 1`] = `
Array [
  .c0 {
  mix-blend-mode: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  mix-blend-mode: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  mix-blend-mode: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  mix-blend-mode: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`mixBlendMode renders string 1`] = `
Array [
  .c0 {
  mix-blend-mode: July;
}

<div
    className="c0"
  />,
  .c0 {
  mix-blend-mode: July;
}

<div
    className="c0"
  />,
  .c0 {
  mix-blend-mode: June;
}

<div
    className="c0"
  />,
  .c0 {
  mix-blend-mode: June;
}

<div
    className="c0"
  />,
]
`;

exports[`mixBlendMode renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`mixBlendMode renders valid theme path 1`] = `
Array [
  .c0 {
  mix-blend-mode: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  mix-blend-mode: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  mix-blend-mode: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  mix-blend-mode: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
